hphp/hack/test/typecheck/nullable_cast/nullable_cast_bad.php
<?hh // strict

function test_bad(): void {
  $foo = null;
  $_ = (string)$foo;
}
